--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-dom": "^18.2.0",
     "react-fast-marquee": "^1.6.4",
     "react-router-dom": "^6.22.3",
+    "react-transition-group": "^4.4.5",
     "sort-by": "^0.0.2",
     "swiper": "^11.1.0"
   },
