--- a/package.json
+++ b/package.json
@@ -13,10 +13,12 @@
     "@babel/core": "^7.24.5",
     "@babel/preset-env": "^7.24.5",
     "@babel/preset-react": "^7.24.1",
+    "@gsap/react": "^2.1.1",
     "@rollup/plugin-babel": "^6.0.4",
     "@swc/core": "^1.5.7",
     "@swc/wasm": "^1.5.7",
     "@vitejs/plugin-react": "^4.2.1",
+    "gsap": "^3.12.5",
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.4",
     "prop-types": "^15.8.1",
@@ -25,6 +27,7 @@
     "react-fast-marquee": "^1.6.4",
     "react-router-dom": "^6.22.3",
     "react-transition-group": "^4.4.5",
+    "scrolltrigger": "^1.0.1",
     "sort-by": "^0.0.2",
     "swiper": "^11.1.0",
     "vite": "^5.2.11"
